2010-03-19  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: add libxul-embedding to PACKAGED_IDS for xulrunner
	1.9.2.
	Reported by OBATA Akio. Thanks!!!

2010-02-28  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: generate collected flags type. [#2925285]
	Reported by tobi. Thanks!!!

2010-01-02  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: fix -Wl,-rpath syntax. [#2924766]
	Reported by OBATA Akio. Thanks!!!

2009-08-02  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: add seamonky to detect target list.
	Suggested by OBATA Akio. Thanks!!!

	* extconf.rb: auto-generate src/depend for existing GtkMozEmbed
	package.
	* src/depend: remove.
	Reported by OBATA Akio. Thanks!!!

2009-05-31  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: add missing existent check.
	Patch by OBATA Akio. Thanks!!!

2009-03-07  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb, src/rbgtkmozembed.c: generate enum types automatically.

	* test/run-test.rb, test/gtk-moz-embed-test-utils.rb: setup test
	environment.

	* src/lib/gtkmozembed.rb, test/test-gtk-moz-embed.rb: add aliases
	for more readable constant name.

	* extconf.rb, src/rbgtkmozembed.[ch], rbgtkmozembed-init.cpp:
	support libxul-embedding-unstable.

2007-12-28  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkmozembed.c: used RSTRING_PTR() and RSTRING_LEN().

2007-07-08  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgtkmozembed.c: use rb_block_proc() directly instead of using
	G_BLOCK_PROC().

2006-11-05  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Check xulrunner/firefox/mozilla packages.

2006-06-28  Mirko Maischberger <mirko@lilik.it>
	In response to #1511917
	* extconf.rb: mozpath stripped.

2006-06-17  Masao Mutoh <mutoh@highway.ne.jp>
	* sample/ruby-gecko.rb: Remove Gtk.init.

2006-06-14  Mirko Maischberger <mirko@lilik.it>
	This should close bug #1495276
	* src/rbgtkmozembed.c: set the moz comp_path in Init if
	DEFAULT_MOZILLA_FIVE_HOME is defined.
	* extconf.rb: Now defaults to xulrunner and defines