@@ -1,3 +1,7 @@
+2010-09-23  Kouhei Sutou  <kou@cozmixng.org>
+
+	* extconf.rb: support Ruby/GLib2 directory structure change.
+
 2010-03-19  Kouhei Sutou  <kou@cozmixng.org>
 
 	* extconf.rb: add libxul-embedding to PACKAGED_IDS for xulrunner
